server/compilers/goLiteJS/src/test/ml1/valid/array1.go
// array support
package main

var x [3]int

func main() {
    x[0] = 0
    x[1] = 1
    x[2] = 2
}
