server/compilers/goLiteJS/src/test/ml1/invalid/slice2.go
// append without assignment
package main

var x []int

func main(){
    append(x,1)
}
